# neural-style-transfer

./: .dockerignore  .gitignore  DEVLOG.md  Dockerfile  README.md  evaluate.py  package.json  pyproject.toml  streamlit_app.py  train.py  transform_image.py  transform_video.py  vercel.json
.github/workflows/: ci.yml
scripts/: sync-web-next.mjs
src/nst/: __init__.py
src/nst/models/: __init__.py  adain_net.py  gatys_vgg.py  reconet_style.py  temporal_video.py
src/nst/utils/: __init__.py  flow.py  gram.py  image_tensor.py  losses.py
tests/: test_adain_forward.py  test_gatys_forward.py  test_gram.py  test_temporal_pipeline.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
