[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-style-transfer"
version = "0.1.0"
description = "Production-grade neural style transfer: Gatys VGG-19, AdaIN fast NST, and temporal video stylization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Neural Style Transfer", email = "dev@example.com" }]
keywords = ["neural-style-transfer", "pytorch", "adain", "vgg"]
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "numpy>=1.24",
  "pillow>=10.0",
  "opencv-python-headless>=4.8",
  "streamlit>=1.28",
  "scipy>=1.11",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=24.0",
  "ruff>=0.4",
  "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
